3282
here's the test you asked: behavior as expected...

~/workspace7u6/tt/ScalaFail1/src\> 
~/workspace7u6/tt/ScalaFail1/src\> scalac -d ../bin fail1/*
fail1/SC11.scala:4: error: type mismatch;
 found   : Int(1)
 required: String
   def m1 : String = 1
                     ^
one error found
~/workspace7u6/tt/ScalaFail1/src\> cd ../../ScalaFail2/src
~/workspace7u6/tt/ScalaFail2/src\> scalac -d ../bin fail2/*
~/workspace7u6/tt/ScalaFail2/src\> > scalac -d ../bin -classpath ../../ScalaFail1/bifail2/*
fail2/SC22.scala:4: error: not found: type SC11
   def m1 : String = new SC11().m1
                         ^
fail2/SC23.scala:6: error: not found: type SC12
   def m1 : String = new SC12().m1
                         ^
two errors found
